# GameOfLife_sparse

./: CMakeLists.txt  README.md
include/: game_of_life.h
src/: game_of_life.cpp  main.cpp  perf_test.cpp
tests/: game_of_life_test.cpp
